fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -216,13 +216,6 @@ h4 {
 	margin-bottom: 10vh;
 }
 
-@media screen and (max-width: 800px) {
-	.section {
-		margin-top: 5vh;
-		margin-bottom: 5vh;
-	}
-}
-
 .overview {
 	display: flex;
 	width: 100%;
